--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Ensley Churh of Christ
+title: Ensley Church of Christ
 
 # Your name to show in the footer
 author: Technology Committee of ECOC
