--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ navbar-links:
     - Community:
   Events: "https://deanattali.com"
   Non-members:
-    - Why the Church of Christ?: 
+    - Why the Church of Christ?: "whycoc"
     - Bible Study Requests:
     - Prayer Request:
   Members:
