--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ navbar-links:
   Events: 
   Non-members:
     - Why the Church of Christ?: "whycoc"
-    - Bible Study Requests:
+    - Bible Study Requests: "biblestudy"
     - Prayer Request: "prayerworks"
   Members:
     - Offering:
