adding page for biblestudy stream; updating yaml

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ navbar-links:
     - Feedback:
   Media:
     - Sunday Service Live Stream: 
+    - Bible Study Live Stream: "biblestudystream"
     - Event Photos:
 
   
@@ -70,7 +71,7 @@ social-network-links:
 # github: daattali
 #  twitter: daattali
 #  patreon: DeanAttali
-  youtube: c/UCtxWKCvQS5X-Bq2WI6WswWA
+  youtube: c/WorshipWithECOC
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
