adding sunday service stream page

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ navbar-links:
     - Prayer Requests: "prayerworks"
     - Feedback:
   Media:
-    - Sunday Service Live Stream: 
+    - Sunday Service Live Stream: "sundayservicestream"
     - Bible Study Live Stream: "biblestudystream"
     - Event Photos:
 
