--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/invitation_church.jpeg"
+avatar: "/assets/img/ECOC_transparent1.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: false
@@ -65,7 +65,7 @@ round-avatar: false
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "ensleycochrist@gmail.com"
+  email: "technology@ensleychurchofchrist.org"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
   facebook: https://www.facebook.com/groups/191286497589238
 # github: daattali
